# mstream

./: CMakeLists.txt
data/: config.json  rtp_client.sh
data/config/: config.json
data/hls/: client.sh  index.html  playlist.m3u8
data/rstp/: rstp_client.sh
data/rtsp/: rstp_client.sh
data/tcp/: tcp_client.sh
data/udp/: udp_client.sh  udp_server.sh
lib/rtsp/aarch64/lib/: libgstrtspserver-1.0.so.0.1902.0
lib/rtsp/aarch64/lib/pkgconfig/: gstreamer-rtsp-server-1.0.pc
lib/rtsp/armv7l/1.14.4/lib/: libgstrtspserver-1.0.la  libgstrtspserver-1.0.so.0.1404.0
lib/rtsp/armv7l/1.14.4/lib/gstreamer-1.0/: libgstrtspclientsink.la
lib/rtsp/armv7l/1.18.4/lib/: libgstrtspserver-1.0.so.0
src/common/: avreader.cpp  avreader.h  avwriter.cpp  avwriter.h  common.cpp  common.h  config.cpp  config.h  log.cpp  log.h  threadsafequeue.h  types.h
src/imgproc/: image.cpp  image.h  imageprocessor.cpp  imageprocessor.h  imgproc.cpp  imgproc.h
src/input/: avreader.cpp  camera.cpp  camera.h  camerainput.cpp  camerainput.h  file.cpp  file.h  fileinput.cpp  fileinput.h  gstcamera.cpp  gstcamera.h  iinput.h  libcamera.cpp  libcamera.h  ocv.cpp  ocv.h  ocvinput.cpp  ocvinput.h  v4lcamera.cpp  v4lcamera.h
src/main/: main.cpp  streamer.cpp  streamer.h
src/nn/: dnn.cpp  dnn.h  dnnetwork.cpp  dnnetwork.h  dnnonnx.cpp  dnnonnx.h  innetwork.h  khadas.cpp  khadas.h  khadasnetwork.cpp  khadasnetwork.h  rknn.cpp  rknn.h  rknnnetwork.cpp  rknnnetwork.h  rknnpostprocess.cpp  rknnpostprocess.h  rknnpp.cpp  rknnpp.h  tengine.cpp  tengine.h  tengine8bit.cpp  tengine8bit.h  tenginenetwork.cpp  tenginenetwork.h  tenginepostprocess.cpp  tenginepostprocess.h  tenginepp.cpp  tenginepp.h  tenginetimvx.cpp  tenginetimvx.h  tenginetimvxnetwork.cpp  tenginetimvxnetwork.h
src/output/: file.cpp  file.h  fileoutput.cpp  fileoutput.h  hls.cpp  hls.h  hlsoutput.cpp  hlsoutput.h  ioutput.h  null.cpp  null.h  nulloutput.cpp  nulloutput.h  rtp.cpp  rtp.h  rtpoutput.cpp  rtpoutput.h  rtsp.cpp  rtsp.h  rtspoutput.cpp  rtspoutput.h  tcp.cpp  tcp.h
